workshop04/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio
  labels:
    app: minio
spec:
  serviceName: minio-hsvc
  replicas: 3
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
    - metadata:
        name: data-vol
      spec:
        accessModes:
          - ReadWriteOncePod
        storageClassName: do-block-storage
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
        - name: minio-container
          image: bitnami/minio:2025.4.22
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: //minio/health/live
              port: minio-port
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: api-port
              containerPort: 9000
            - name: console-port
              containerPort: 9090
          volumeMounts:
            - name: data-vol
              mountPath: /data
          resources:
            requests:
              cpu: "200m"
              memory: "250Mi"
            limits:
              cpu: "200m"
              memory: "250Mi"
      securityContext:
        fsGroup: 1001

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
    - name: api-port
      port: 9000
    - name: console-port
      port: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: api-port
      port: 9000
    - name: console-port
      port: 9090
