workshop04/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ing
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
    - host: data-167.172.7.70.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  name: api-port
    - host: console-167.172.7.70.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-svc
                port:
                  name: console-port
